--- a/vignettes/eda-pmxhelpr.Rmd
+++ b/vignettes/eda-pmxhelpr.Rmd
@@ -52,7 +52,8 @@ This variable represents the nominal time of sample collection relative to first
 
 ```{r data-ntime}
 ##Unique values of NTIME
-unique(data_sad$NTIME)
+ntimes <- unique(data_sad$NTIME)
+ntimes
 
 ##Comparison of number of unique values of NTIME and TIME
 length(unique(data_sad$NTIME))
@@ -83,37 +84,57 @@ In our visualizations, we will leverage the following dataset variables:
 
 ```{r plot-dvtime, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean", 
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)") 
+            ylab = "Concentration (ng/mL)") 
 ```
 
 Not a bad plot with minimal arguments! We can see the mean for each dose as a colored thick line and observed data points as colored open circles with some alpha added. A caption also prints by default indicating what the plot elements depict. The caption can be removed by specifying `show_caption = FALSE`.
 
 ```{r plot-dvtime-nocap, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean", 
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", show_caption = FALSE) 
+            ylab = "Concentration (ng/mL)", show_caption = FALSE) 
 ```
-
-However, this plot could be misleading! The food effect and fasted portions of the study are being pooled together within the 100 mg dose! Also, these data are likely better visualized using a log-scale y-axis, and the x-axis breaks are not optimized for the study design. 
 
 ## Adjusting plot aesthetics
 
-Luckily, `plot_dvtime` returns a `ggplot` object which we can modify like any other `ggplot`! Therefore, we will add a manual x-axis scale, facet by PART, and apply a more minimal plot theme.  
+`plot_dvtime` includes uses a helper function (`breaks_time`) to automatically determine x-axis breaks based on the units of the time variable! Two arguments in `plot_dvtime` are passed to `breaks_time`:
 
-```{r plot-dvtime-part, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
-plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean", 
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)") +
-  scale_x_continuous(breaks = seq(0,168,24))+
-  facet_wrap(~PART)
+  + `timeu` character string specifying time units. Options include: "hours" (default), "days", "weeks", "months"
+  + `n_breaks` number breaks requested from the algorithm. Default = 5.
+  
+Let's pass the vector of nominal times we defined earlier into the `breaks_time` function and see what we get!
+
+```{r}
+breaks_time(ntimes, unit = "hours", n = 5)
+breaks_time(ntimes, unit = "hours", n = 10)
+breaks_time(ntimes, unit = "hours", n = length(ntimes))
 ```
 
-Much better aesthetics! We still need to log-transform the y-axis to better visualize the terminal phase profile. We could specify a log10 y-axis transformation by adding in `scale_y_log10()`; however, `plot_dvtime` includes an argument `log_y` which performs this operation with one added benefit when using automatically generated plot captions with `show_captions = TRUE`. 
+We can see that the default of n = 5 does not give an optimal number of breaks, but it also does not select too many breaks. It appears that an n = 8-10 is optimal for this dataset. Requesting a breaks vector of the length of the unique nominal time vector also does not produce an optimal number of breaks.
+
+Let's request 10 breaks for our x-axis using the `n_breaks` argument of `plot_dvtime`. Our dataset uses the default time units ("hours"); therefore, explicit specification of the `timeu` argument is not required.
+
+```{r plot-dvtime-breaks, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean", 
+            ylab = "Concentration (ng/mL)", n_breaks = 10) 
+```
+
+Much better! However, these data are probably best visualized on a log-scale y-axis to better visualize the terminal phase profile. `plot_dvtime` includes an argument `log_y` which performs this operation with one added benefit over adding in a layer with `scale_y_log10` when using automatically generated plot captions with `show_captions = TRUE`. 
 
 `plot_dvtime` uses the `stat_summary` function from `ggplot2` to calculate and plot the central tendency measures and error bars. An often overlooked feature of `stat_summary`, is that it calculates the summary statistics *after* any transformations to the data performed by changing the scales. This means that when `scale_y_log10()` is applied to the plot, the data are log-transformed for plotting and the central tendency measure returned when requesting `"mean"` from `stat_summary` is the *geometric mean*. If the `log_y` argument is used to generate semi-log plots along with `show_captions = TRUE`, then the caption will clearly delineate where arithmetic and gemoetric means are being returned. 
 
 ```{r plot-dvtime-part-log, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean", 
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE) +
-  scale_x_continuous(breaks = seq(0,168,24))+
+            ylab = "Concentration (ng/mL)", log_y = TRUE,
+            n_breaks = 8) 
+```
+
+But wait...this plot is potentially misleading! The food effect portion of the study is being pooled together with the fasted data within the 100 mg dose! 
+
+Luckily, `plot_dvtime` returns a `ggplot` object which we can modify like any other `ggplot`! Therefore, we can facet by PART by simply adding in another layer to our `ggplot` object. 
+
+```{r plot-dvtime-part, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean", 
+            ylab = "Concentration (ng/mL)", n_breaks = 10) +
   facet_wrap(~PART)
 ```
 
@@ -121,9 +142,8 @@ The clinical team would like a simpler plot that clearly displays the central te
 
 ```{r plot-dvtime_part-meansdl, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean_sdl", 
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Concentration (ng/mL)", n_breaks = 10, log_y = TRUE,
             obs_dv = FALSE) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -133,9 +153,8 @@ We will change the central tendency measure to the median and add the spaghetti 
 
 ```{r plot-dvtime-part-ind, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(data = plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "median", 
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE, 
+            ylab = "Concentration (ng/mL)", n_breaks = 10, log_y = TRUE, 
             ind_dv = TRUE) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -156,9 +175,8 @@ The `loq` argument species the value of the LLOQ. The `loq` argument must be spe
 
 ```{r plot-dvtime-blq1, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Concentration (ng/mL)", n_breaks=10, log_y = TRUE,
             loq_method = 2) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -166,9 +184,8 @@ The same plot is obtained by specifying `loq = 1`
 
 ```{r plot-dvtime-blq2, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Concentration (ng/mL)", n_breaks = 10, log_y = TRUE,
             loq_method = 2, loq = 1) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -180,9 +197,8 @@ We can also generate dose-normalized concentration-time plots by specifying `dos
 
 ```{r plot-dvtime-dn, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", n_breaks = 10, log_y = TRUE,
             dosenorm = TRUE) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -191,9 +207,8 @@ When `dosenorm = TRUE`, the variable `DOSE` needs to be present in the input dat
 ```{r plot-dvtime-dn-nodose, fig.height=4, fig.width=6, message=TRUE, warning=TRUE, error=TRUE}
 plot_dvtime(select(plot_data, -DOSE), 
             dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", n_breaks=10, log_y = TRUE,
             dosenorm = TRUE) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -201,9 +216,8 @@ Dose-normalization is performed *AFTER* BLQ imputation in the case in which both
 
 ```{r plot-dvtime-blq-dn, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", n_breaks = 10, log_y = TRUE,
             loq_method = 2, dosenorm = TRUE) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -215,10 +229,9 @@ We can specify `cent = "none"` to remove the central tendency layer when plottin
 
 ```{r plot-dvtime-blq2-indonly, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "none",
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Concentration (ng/mL)", n_breaks = 10, log_y = TRUE,
             ind_dv = TRUE,
             loq_method = 2, loq = 1) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)
 ```
 
@@ -230,10 +243,9 @@ plist<- list()
 for(i in 1:length(ids)){
   plist[[i]] <- plot_dvtime(filter(plot_data, ID == ids[i]), 
                                dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "none",
-            ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Concentration (ng/mL)", n_breaks = 10, log_y = TRUE,
             ind_dv = TRUE,
             loq_method = 2, loq = 1, show_caption = FALSE) +
-  scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)+
   labs(title = paste0("ID = ", ids[i], " | Dose = ", unique(plot_data$DOSE[plot_data$ID==ids[i]]), " mg"))+
   theme(legend.position="none")
