--- a/vignettes/eda-pmxhelpr.Rmd
+++ b/vignettes/eda-pmxhelpr.Rmd
@@ -63,12 +63,13 @@ length(unique(data_sad$TIME))
 
 ## Overview of `plot_dvtime`
 
-Let's visualize the data. Let's visualize the data. For this visualization, we will leverage the functionality of `plot_dvtime` to visualize our data. First, we will filter to observation records only and derive a factor variable from DOSE to pass to the color aesthetic.
+Let's visualize the data. Let's visualize the data. For this visualization, we will leverage the functionality of `plot_dvtime` to visualize our data. First, we will filter to observation records only and derive some factor variables, which can be passed to the color aesthetic.
 
 ```{r data-plotdata}
 plot_data <- data_sad %>% 
   filter(EVID == 0) %>% 
-  mutate(`Dose (mg)` = factor(DOSE))
+  mutate(`Dose (mg)` = factor(DOSE, levels = c(10, 50, 100, 200, 400)), 
+         `Food Status` = factor(FOOD, levels = c(0, 1), labels = c("Fasted", "Fed")))
 ```
 
 Now let's visualize the concentration-time data. `pmxhelpr` includes a function for common visualizations of observed concentration-time data in exploratory data analysis: `plot_dvtime`
@@ -257,6 +258,56 @@ plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "me
             ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", log_y = TRUE,
             loq_method = 2, dosenorm = TRUE) +
   facet_wrap(~PART)
+```
+
+## Adjusting the Color Aesthetics
+
+Only a single variable can be passed to the `col_var` argument of `plot_dvtime`. Suppose we want to look at the interaction between two variables in the color aesthetic. This can be accomplished in `ggplot2` using the `interaction` function, which computes an unordered factor representing the interaction between the two variables. Let's visualize the interaction between the factor versions of the variables `DOSE` and `FOOD`.
+
+```{r plot-int, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+ggplot(plot_data, aes(x = TIME, y = ODV, col = interaction(`Dose (mg)`, `Food Status`))) +
+  geom_point()+
+  stat_summary(data = plot_data, aes(x = NTIME, y = ODV, col = interaction(`Dose (mg)`, `Food Status`)),
+               fun.y = "mean", geom = "line") + 
+  scale_x_continuous(breaks = seq(0,168,24)) +
+  scale_y_log10()+
+  theme_bw() + 
+  labs(y = "Concentration (ng/mL)", x = "Time (hours)")
+```
+
+The functionality of `interaction()` cannot be used within `plot_dvtime`; however, we can reproduce it by formally creating a variable for the interaction we want to visualize. This also affords us the opportunity to define the factor labels, levels, and order formally, which will affect how the interaction is displayed on the plot.
+
+```{r plot-dvtime-int, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+plot_data_int <- plot_data %>%  
+  mutate(`Dose (mg) and Food` = ifelse(FOOD == 0, paste(DOSE, "mg", "Fasted"), paste(DOSE, "mg", "Fed")), 
+         `Dose (mg) and Food` = factor(`Dose (mg) and Food`, levels = c("10 mg Fasted", 
+                                                                         "50 mg Fasted", 
+                                                                         "100 mg Fasted", 
+                                                                         "100 mg Fed", 
+                                                                         "200 mg Fasted", 
+                                                                         "400 mg Fasted")))
+
+plot_dvtime(plot_data_int, dv_var = c(DV = "ODV"), col_var = "Dose (mg) and Food", cent = "mean",
+            ylab = "Concentration (ng/mL)", log_y = TRUE,
+            loq_method = 2)
+```
+
+This looks pretty nice! The legend is formatted cleanly and the colors are assigned to each unique condition of the interaction. However, we can actually take this one step further, and define our interaction variable as an *ordered* factor, which results `ggplot2` applying the *viridis* color scale from the `viridisLite` package. 
+
+```{r plot-dvtime-int-order, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
+plot_data_int <- plot_data %>%  
+  mutate(`Dose (mg) and Food` = ifelse(FOOD == 0, paste(DOSE, "mg", "Fasted"), paste(DOSE, "mg", "Fed")), 
+         `Dose (mg) and Food` = factor(`Dose (mg) and Food`, levels = c("10 mg Fasted", 
+                                                                         "50 mg Fasted", 
+                                                                         "100 mg Fasted", 
+                                                                         "100 mg Fed", 
+                                                                         "200 mg Fasted", 
+                                                                         "400 mg Fasted"),
+                                       ordered = TRUE))
+
+plot_dvtime(plot_data_int, dv_var = c(DV = "ODV"), col_var = "Dose (mg) and Food", cent = "mean",
+            ylab = "Concentration (ng/mL)", log_y = TRUE,
+            loq_method = 2)
 ```
 
 # Individual Concentration-time plots
